--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "remark-html": "^15.0.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/node": "^18.7.6",
