--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0",
+    "sass": "^1.54.5",
     "scss": "^0.2.4"
   },
   "devDependencies": {
